# apk

./: .gitignore  BUILD.md  CMakeLists.txt  MIGRATION_SUMMARY.md  README.md  build.gradle.kts  gradle.properties  gradlew  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeBridge.cpp
app/src/main/cpp/telemetry/: StatsCalculator.cpp  StatsCalculator.hpp  TelemetryEngine.cpp  TelemetryEngine.hpp  TelemetryMessage.cpp  TelemetryMessage.hpp  TelemetryRingBuffer.cpp  TelemetryRingBuffer.hpp
app/src/main/java/com/pixhawk/gcs/: MainActivity.kt
app/src/main/java/com/pixhawk/gcs/jni/: MavlinkJNI.kt
app/src/main/java/com/pixhawk/gcs/logging/: TelemetryLogger.kt
app/src/main/java/com/pixhawk/gcs/mavlink/: MavlinkCrc.kt
app/src/main/java/com/pixhawk/gcs/network/: BluetoothTransport.kt  MavlinkParser.kt
app/src/main/java/com/pixhawk/gcs/permissions/: PermissionsManager.kt
app/src/main/java/com/pixhawk/gcs/transport/: BluetoothTransport.kt  TcpTransport.kt  Transport.kt  TransportManager.kt  UdpTransport.kt
app/src/main/java/com/pixhawk/gcs/ui/screens/: ConnectScreen.kt  FlyScreen.kt  HybridDemoScreen.kt  OtherScreens.kt
app/src/main/java/com/pixhawk/gcs/ui/theme/: Theme.kt
app/src/main/java/com/pixhawk/gcslab/: MainActivity.java  NativeBridge.java
app/src/main/java/com/pixhawk/gcslite/: MainActivity.kt
app/src/main/java/com/pixhawk/gcslite/network/: BluetoothTransport.kt  MavlinkParser.kt
app/src/main/java/com/pixhawk/gcslite/ui/screens/: ConnectScreen.kt  FlyScreen.kt  OtherScreens.kt
app/src/main/java/com/pixhawk/gcslite/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
resources/: qml.qrc
src/cpp/core/: MavlinkCore.cpp  MavlinkCore.h
src/cpp/jni/: MavlinkJNI.cpp
src/qml/: main.qml
